[package]
name = "ssurl"
version = "0.1.0"
authors = ["bugnofree <pwnkeeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
base64 = "0.11.0"
clap = "2.33.0"
